--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-family: 'PT Sans', sans-serif;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Cantarell&family=Francois+One&family=Yanone+Kaffeesatz&display=swap');
 .home,
 .services,
 .products,
