--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,6 +13,7 @@ img {
 height:50px;
 width:50px;
 
+
 }
 
 
@@ -26,9 +27,9 @@ width:50px;
 
 .navbar-logo {
   color: #0067B3;
-  justify-self: start;
-  position: align;
+  justify-self: center;
   margin-left: 20px;
+
   cursor: pointer;
   font-family: 'Cantarell';
   text-decoration: none;
@@ -85,7 +86,7 @@ width:50px;
   display: none;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 400px) {
   .NavbarItems {
     position: relative;
   }
@@ -126,7 +127,89 @@ width:50px;
   .navbar-logo {
     position: absolute;
     top: 0;
+    left: -90px;
+    transform: translate(25%, 50%);
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: #00773D;
+    font-size: 2rem;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
+  }
+  }
+
+@media screen and (min-width: 400px) and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: #242222;
     left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: -60px;
     transform: translate(25%, 50%);
   }
 
