--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -34,12 +34,12 @@ h1 {
 
 .cards__item__link {
   display: flex;
-  flex-flow: column;
-  width: 100%;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  width: 200px;
+  height: 200px;
+  box-shadow: 1px 10px 30px rgba(10, 20, 110, 0.459);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: hidden;
   text-decoration: none;
 }
@@ -89,14 +89,9 @@ h1 {
   transform: scale(1.1);
 }
 
-.cards__item__info {
-  padding: 20px 30px 30px;
-}
 
 .cards__item__text {
-  color: #252e48;
-  font-size: 18px;
-  line-height: 24px;
+  padding: 6px 8px;
 }
 
 @media only screen and (min-width: 1200px) {
