--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -103,7 +103,7 @@ width:50px;
   }
 
   .nav-menu.active {
-    background: #242222;
+    background: #ffffff;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
