--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 .home,
 .services,
 .products,
-.sign-up {
+.sign-up,
+.agronegocio {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -27,6 +28,15 @@
 }
 
 .products {
+  background-image: url('images/img-1.jpg');
+  background-position: center;
+  background-size: fill;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-size: 100px;
+}
+
+.agronegocio {
   background-image: url('images/img-1.jpg');
   background-position: center;
   background-size: fill;
