--- a/src/App.css
+++ b/src/App.css
@@ -8,48 +8,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Yanone+Kaffeesatz&display=swap');
 .home,
 .services,
+.transito,
 .products,
-.sign-up,
-.agronegocio {
+.sign-up
+.agronegocio,
+.desenvolvimentohumano,
+.economia,
+.educacao,
+.empregos,
+.infraestrutura,
+.meioambiente,
+.orcamentario,
+.saude,
+.social {
   display: flex;
-  height: 90vh;
+  height: 70vh;
+  width: 110vh;
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
+  font-size: 10rem;
 }
 
-.services {
-  background-image: url('images/img-2.jpg');
+.social {
+  display: flex;
+  height: 50vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 10rem;
+}
+
+.indicadortitle {
+  background-color: rgb(22, 15, 2);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 45px;
+  text-align: center;
+  font-family: 'Roboto';
 }
 
-.products {
-  background-image: url('images/img-1.jpg');
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
+.titulobi {
 
-.agronegocio {
-  background-image: url('images/img-1.jpg');
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.sign-up {
-  background-image: url('images/img-8.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
+  color: rgb(0, 0, 0);
+  font-size: 25px;
+  text-align: start;
+  font-family: 'Roboto';
 }
