--- a/src/components/pages/pagesBI/Navbarteste.css
+++ b/src/components/pages/pagesBI/Navbarteste.css
@@ -1,14 +1,13 @@
-.navbar {
-  background: #fff;
-  height: 80px;
+.navbarteste {
+  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(255, 255, 255) 100%);
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   position: sticky;
   top: 0;
-  z-index: 999;
-  border-bottom: 2px solid #0067B3
+  z-index: 800;
 }
 
 img {
@@ -93,6 +92,7 @@ width:50px;
     display: flex;
     flex-direction: column;
     width: 100%;
+
     position: absolute;
     top: 80px;
     left: -100%;
@@ -269,7 +269,7 @@ li {
   position: absolute;
 }
 .sub__menus {
-  position: sticky;
+  position: absolute;
   display: none;
   background: white;
   border: 1px solid lavender;
