--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,7 @@
   padding: 0;
   font-family: 'PT Sans', sans-serif;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Yanone+Kaffeesatz&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&family=Crete+Round&family=Roboto:wght@300&family=Yanone+Kaffeesatz&display=swap&?family=Lato:300,400,700,300italic,400italic,700italic');
 .home,
 .services,
 .transito,
@@ -38,7 +37,7 @@
 }
 
 .indicadortitle {
-  background-color: rgb(22, 15, 2);
+  background-color: rgb(83, 65, 33);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -49,8 +48,7 @@
 }
 
 .titulobi {
-
-  color: rgb(0, 0, 0);
+  color: rgb(31, 61, 11);
   font-size: 25px;
   text-align: start;
   font-family: 'Roboto';
