--- a/src/components/pages/pagesBI/BoxLegend.css
+++ b/src/components/pages/pagesBI/BoxLegend.css
@@ -4,32 +4,59 @@
   padding: 15px;
   border: 2px solid rgba(56, 136, 202, 0.534);
   margin: 0;
-  border-radius: 20px;
+  border-radius: 2px;
   text-align: center;
   font-family: 'Roboto';
   margin-top: 20px;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.424);
+
+}
+
+.legend {
+  width: 11px;
+  height: 85px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  max-width: 1120px;
+  width: 90%;
+  margin: 0 auto;
+ 
+  padding: 15px;
+  font-family:'Antic Slab';
 }
 
 @media only screen and (max-width: 375px) {
   .boxlegend {
-    height: 50vh;
-    width: 50vh;
+    height: 60vh;
+    width: 46vh;
     padding: 4px;
     }
 }
 
-@media only screen and (min-width: 376px) and (max-width: 414px) {
+@media only screen and (min-width: 375px) and (max-width: 768px) {
   .boxlegend {
-    height: 55vh;
+    height: 75vh;
     width: 52vh;
     padding: 4px;
     }
 }
 
-@media only screen and (min-width: 414px) and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1020px) {
   .boxlegend {
-    height: 55vh;
-    width: 55vh;
+    height: 95vh;
+    width: 70vh;
     padding: 4px;
     }
 }
+
+@media only screen and (min-width: 1020px) and (max-width: 1440px) {
+  .boxlegend {
+    height: 140vh;
+    width: 165vh;
+    padding: 4px;
+    align-items: center;
+    }
+}
+
