--- a/src/components/pages/pagesBI/NavbarSub.css
+++ b/src/components/pages/pagesBI/NavbarSub.css
@@ -1,6 +1,6 @@
 .navbarteste {
-  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(255, 255, 255) 100%);
-  height: 50px;
+  background: linear-gradient(90deg, rgb(226, 240, 218) 0%, rgb(210, 230, 202) 100%);
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,29 +10,12 @@
   z-index: 800;
 }
 
-img {
-height:50px;
-width:50px;
-}
-
 .navbar-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 80px;
   max-width: 1500px;
-}
-
-.navbar-logo {
-  color: #0067B3;
-  justify-self: center;
-  margin-left: 20px;
-  cursor: pointer;
-  font-family: 'Yanone Kaffeesatz';
-  text-decoration: none;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
 }
 
 .fa-typo3 {
@@ -55,7 +38,7 @@ width:50px;
   height: 80px;
 }
 
-.nav-links {
+.nav-links-sub {
   color: #000000;
   display: flex;
   align-items: center;
@@ -66,13 +49,14 @@ width:50px;
   height: 100%;
 }
 
-.nav-links:hover {
-  border-bottom: 4px solid #0067B3;
+.nav-links-sub:hover {
+  border-bottom: 4px solid #ffffff;
   transition: all 0.2s ease-out;
+  margin-top:-14px;
 }
 
 .fa-bars {
-  color: #0067B3;
+  color: #000000;
 }
 
 .nav-links-mobile {
@@ -108,14 +92,14 @@ width:50px;
     z-index: 1;
   }
 
-  .nav-links {
+  .nav-links-sub {
     text-align: center;
     padding: 2rem;
     width: 100%;
     display: table;
   }
 
-  .nav-links:hover {
+  .nav-links-sub:hover {
     background-color: #fff;
     color: #242424;
     border-radius: 0;
@@ -139,7 +123,7 @@ width:50px;
   }
 
   .fa-times {
-    color: #0067B3;
+    color: #000000;
     font-size: 2rem;
   }
 
