--- a/src/components/pages/pagesBI/Bi.css
+++ b/src/components/pages/pagesBI/Bi.css
@@ -52,7 +52,7 @@
     color: rgb(4, 65, 80);
     font-size: 17px;
     text-align: center;
-    font-family: 'Crete Round';
+    font-family: 'Roboto';
     padding: 0.5em;
   }
   
