--- a/src/components/pages/pagesBI/BoxLegend.css
+++ b/src/components/pages/pagesBI/BoxLegend.css
@@ -1,7 +1,7 @@
 .boxlegend {
   width: 1130px;
   height: 850px;
-  padding: 15px;
+  padding-left: 40px;
   border: 2px solid rgba(56, 136, 202, 0.534);
   margin: 0;
   border-radius: 2px;
@@ -23,7 +23,6 @@
   max-width: 1120px;
   width: 90%;
   margin: 0 auto;
- 
   padding: 15px;
   font-family:'Roboto';
 }
