--- a/src/components/pages/pagesBI/NavbarSub.css
+++ b/src/components/pages/pagesBI/NavbarSub.css
@@ -1,6 +1,6 @@
 .navbarteste {
-  background: linear-gradient(90deg, rgb(226, 240, 218) 0%, rgb(210, 230, 202) 100%);
-  height: 40px;
+  background: rgb(222, 236, 235);
+  height: 65px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,6 +8,18 @@
   position: sticky;
   top: 0;
   z-index: 800;
+}
+
+.navbar-logo-sub {
+  color: #0067B3;
+  justify-self: center;
+  margin-left: 20px;
+  cursor: pointer;
+  font-family: 'Yanone Kaffeesatz';
+  text-decoration: none;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
 }
 
 .navbar-container {
@@ -105,11 +117,21 @@
     border-radius: 0;
   }
 
-  .navbar-logo {
+  .navbar-logo-sub {
     position: absolute;
-    top: 0;
-    left: -90px;
+    top: -15px;
+    left: -9px;
     transform: translate(25%, 50%);
+    font-family: 'Roboto';
+    color: #0067B3;
+    justify-self: center;
+    margin-left: 20px;
+    cursor: pointer;
+    font-family: 'Yanone Kaffeesatz';
+    text-decoration: none;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
   }
 
   .menu-icon {
