--- a/src/components/Aboutother.css
+++ b/src/components/Aboutother.css
@@ -1257,6 +1257,7 @@
   
   .text-center {
     text-align: center !important;
+    font-family: 'Roboto';
 
     
   }
@@ -4956,11 +4957,15 @@
   
   .page-section {
     padding: 8rem 0;
+    font-family: 'Roboto';
+    text-align: justify;
 
   }
   
   .text-white-75 {
     color: rgba(255, 255, 255, 0.75) !important;
+    font-family: 'Roboto';
+    text-align: justify;
   }
   
   .btn-xl {
@@ -5045,8 +5050,6 @@
       color: #f4623a;
     }
   }
-  
-
 
   header.masthead h1, header.masthead .h1 {
     font-size: 2.25rem;
