--- a/src/components/pages/pagesBI/BoxLegend.css
+++ b/src/components/pages/pagesBI/BoxLegend.css
@@ -11,7 +11,6 @@
   align-items: center;
   background-color: rgba(255, 255, 255, 0.424);
   position: center;
-
 }
 
 .legend {
@@ -25,6 +24,8 @@
   margin: 0 auto;
   padding: 15px;
   font-family:'Roboto';
+  font-size: 14px;
+  text-align: justify;
 }
 
 @media only screen and (max-width: 375px) {
