--- a/src/components/About.css
+++ b/src/components/About.css
@@ -218,7 +218,7 @@ progress {
   font-size: 1.90rem;
   text-align: center;
   font-weight: 500;
-  font-family: 'Asap';
+  font-family: 'Roboto';
   padding-bottom:30px;
 }
 
