--- a/src/components/Aboutother.css
+++ b/src/components/Aboutother.css
@@ -1368,16 +1368,15 @@
   background-color: rgba(41, 112, 179, 0.424);
   position: center;
 }
-
   
-  .text-muted >li {
-    --bs-text-opacity: 1;
-    color: #6c757d !important;
-    text-align: left;
-    font-family: 'Roboto';
-    font-size: 16px;
+.text-muted >li {
+  --bs-text-opacity: 1;
+  color: #192d3f !important;
+  text-align: left;
+  font-family: 'Roboto';
+  font-size: 16px;
   
-  }
+}
   
   .text-black-50 {
     --bs-text-opacity: 1;
@@ -1425,7 +1424,7 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #122563;
+    --bs-primary: #00773D;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
@@ -1433,7 +1432,7 @@
     --bs-danger: #dc3545;
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
-    --bs-primary-rgb: 20, 60, 136;
+    --bs-primary-rgb: 0, 119, 61;
     --bs-secondary-rgb: 108, 117, 125;
     --bs-success-rgb: 25, 135, 84;
     --bs-info-rgb: 13, 202, 240;
@@ -1447,7 +1446,7 @@
     --bs-body-bg-rgb: 255, 255, 255;
     --bs-font-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    --bs-gradient: linear-gradient(180deg, rgba(20, 60, 136, 0.897), rgba(255, 255, 255, 0));
+    --bs-gradient: linear-gradient(180deg, rgba(35, 68, 129, 0.897), rgba(255, 255, 255, 0));
     --bs-body-font-family: Merriweather, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     --bs-body-font-size: 1rem;
     --bs-body-font-weight: 400;
@@ -4956,7 +4955,7 @@
   }
   
   .page-section {
-    padding: 8rem 0;
+    padding: 5rem 0;
     font-family: 'Roboto';
     text-align: justify;
 
