--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,7 +8,7 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  border-bottom: 2px solid #0067B3
+  border-bottom: 2px solid #00773D;
 }
 
 img {
@@ -25,7 +25,7 @@ width:50px;
 }
 
 .navbar-logo {
-  color: #0067B3;
+  color: #00773D;;
   justify-self: center;
   margin-left: 20px;
   cursor: pointer;
@@ -68,12 +68,12 @@ width:50px;
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #0067B3;
+  border-bottom: 5px solid #00773D;
   transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-  color: #0067B3;
+  color: #00773D;
 }
 
 .nav-links-mobile {
@@ -139,7 +139,7 @@ width:50px;
   }
 
   .fa-times {
-    color: #0067B3;
+    color: #00773D;
     font-size: 2rem;
   }
 
@@ -175,7 +175,7 @@ img {
   text-align: center;
   display: block;
   margin: 0 auto;
-  color: #0067B3;
+  color: #00773D;
   font-family: 'Inter', sans-serif;
 }
 .navBar .logo img {
@@ -298,10 +298,10 @@ li {
   margin: 7px 27px;
 }
 .menu-item:hover > a{
-  color: #0067B3 !important;
+  color: #00773D !important;
 }
 .menu-item .sub__menus li:hover a{
-  color: #0067B3 !important;
+  color: #00773D !important;
 }
 
 .header__middle__logo img{
