--- a/src/components/pages/pagesBI/Bi.css
+++ b/src/components/pages/pagesBI/Bi.css
@@ -15,21 +15,9 @@
   }
   
   @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto:wght@300&family=Yanone+Kaffeesatz&display=swap');
-  .home,
-  .services,
-  .transito,
-  .products,
-  .sign-up
-  .agronegocio,
-  .desenvolvimentohumano,
-  .economia,
-  .educacao,
-  .empregos,
-  .infraestrutura,
-  .meioambiente,
-  .orcamentario,
-  .saude,
-  .social {
+
+  .economia
+ {
     display: flex;
     height: 90vh;
     width: 155vh;
@@ -63,23 +51,41 @@
     font-family: 'Roboto';
     padding: 0.5em;
   }
+
+  @media screen and (max-width: 588px ) {
+
+    .economia
+    {
+         display: flex;
+         height: 300vh;
+         width: 450vh;
+         align-items: center;
+         justify-content: center;
+         font-size: 10rem;
+       }
+     }
+
+
+
+  @media only screen and (max-width: 375px) {
+
+    .economia
+    {
+         display: flex;
+         height: 25vh;
+         width: 40vh;
+         align-items: center;
+         justify-content: center;
+         font-size: 10rem;
+       }
+     }
+
+
   
   @media only screen and (max-width: 375px) {
-    .home,
-    .services,
-    .transito,
-    .products,
-    .sign-up
-    .agronegocio,
-    .desenvolvimentohumano,
-    .economia,
-    .educacao,
-    .empregos,
-    .infraestrutura,
-    .meioambiente,
-    .orcamentario,
-    .saude,
-    .social {
+
+ .economia
+ {
       display: flex;
       height: 30vh;
       width: 45vh;
@@ -90,21 +96,9 @@
   }
 
 @media only screen and (min-width: 375px) and (max-width: 768px) {
-  .home,
-  .services,
-  .transito,
-  .products,
-  .sign-up
-  .agronegocio,
-  .desenvolvimentohumano,
-  .economia,
-  .educacao,
-  .empregos,
-  .infraestrutura,
-  .meioambiente,
-  .orcamentario,
-  .saude,
-  .social {
+
+  .economia
+   {
     display: flex;
     height: 35vh;
     width: 50vh;
@@ -115,21 +109,8 @@
 }
 
   @media only screen and (min-width: 768px) and (max-width: 1020px) {
-    .home,
-  .services,
-  .transito,
-  .products,
-  .sign-up
-  .agronegocio,
-  .desenvolvimentohumano,
-  .economia,
-  .educacao,
-  .empregos,
-  .infraestrutura,
-  .meioambiente,
-  .orcamentario,
-  .saude,
-  .social {
+  .economia
+ {
     display: flex;
     height: 45vh;
     width: 65vh;
@@ -141,21 +122,8 @@
 }
 
 @media only screen and (min-width: 1020px) and (max-width: 1440px) {
-  .home,
-.services,
-.transito,
-.products,
-.sign-up
-.agronegocio,
-.desenvolvimentohumano,
-.economia,
-.educacao,
-.empregos,
-.infraestrutura,
-.meioambiente,
-.orcamentario,
-.saude,
-.social {
+.economia
+ {
   display: flex;
   height: 100vh;
   width: 160vh;
