--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: #242424;
-  padding: 4rem 0 2rem 0;
+  padding: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,8 +13,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
-  margin-bottom: 24px;
+  margin-bottom: 2px;
   padding: 24px;
   color: #fff;
 }
@@ -22,6 +21,7 @@
 .footer-subscription > p {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
 }
 
 .footer-subscription-heading {
@@ -32,6 +32,8 @@
 .footer-subscription-text {
   margin-bottom: 24px;
   font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .footer-input {
@@ -64,10 +66,14 @@
   text-align: left;
   width: 160px;
   box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .footer-link-items h2 {
   margin-bottom: 16px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .footer-link-items > h2 {
@@ -78,6 +84,9 @@
   color: #fff;
   text-decoration: none;
   margin-bottom: 0.5rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
+  font-size: 13px;
 }
 
 .footer-link-items a:hover {
@@ -139,7 +148,7 @@
 
 @media screen and (max-width: 820px) {
   .footer-links {
-    padding-top: 2rem;
+    padding-top: 0.5rem;
   }
 
   .footer-input {
