--- a/src/components/pages/pagesBI/graphs.css
+++ b/src/components/pages/pagesBI/graphs.css
@@ -11,9 +11,14 @@
     padding: 3rem 0;
     font-family: 'Roboto';
     text-align: justify;
-
   }
-  
+
+  .maisinfos {
+    padding: 3rem 0;
+    font-family: 'Roboto';
+    text-align: justify;
+  }
+ 
   @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Roboto:wght@300&family=Yanone+Kaffeesatz&display=swap');
   .economia
  {
@@ -52,6 +57,7 @@
   }
 
 
+
   @media only screen and (max-width: 375px) {
 
  .economia
@@ -63,6 +69,10 @@
       justify-content: center;
       font-size: 10rem;
     }
+
+    
+ 
+
   }
 
 @media only screen and (min-width: 375px) and (max-width: 768px) {
