--- a/src/components/pages/pagesBI/BoxLegend.css
+++ b/src/components/pages/pagesBI/BoxLegend.css
@@ -23,14 +23,15 @@
 
 
 .legend {
-  width: 98%;
-  margin: 0 auto;
-  padding: 10px;
-  font-family:'Roboto';
-  font-size: 14px;
-  text-align: justify;
+  border: 2px solid rgba(255, 255, 255, 0.308);
+  border-radius: 2px;
+  text-align: center;
+  font-family: 'Roboto';
   margin-top: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.424);
+  position: center;
 
 }
 
