--- a/portal-front/src/components/Footer.css
+++ b/portal-front/src/components/Footer.css
@@ -7,6 +7,17 @@
   align-items: center;
 }
 
+.graphfooter-container {
+  background-color: #ffffff;
+  padding: 2rem 0 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 75px;
+}
+
 .footer-subscription {
   display: flex;
   flex-direction: column;
