--- a/portal-front/src/components/Footer.css
+++ b/portal-front/src/components/Footer.css
@@ -141,15 +141,15 @@
 }
 
 .social-logo {
-  color: #fff;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
   display: flex;
   align-items: center;
   margin-bottom: 16px;
+  height: 55px;
+  width: 130px;
+
 }
 
 .website-rights {
