footer and home

--- a/portal-front/src/components/Cards.css
+++ b/portal-front/src/components/Cards.css
@@ -37,12 +37,13 @@ h1 {
   display: flex;
   width: 240px;
   height: 240px;
-  box-shadow: 1px 10px 30px rgba(10, 20, 110, 0.459);
+  box-shadow: 15px 20px 40px rgba(2, 7, 49, 0.767);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   border-radius: 20px;
   overflow: hidden;
   text-decoration: none;
+  border-color: black;
 }
 
 .cards__item__pic-wrap {
