--- a/portal-front/src/components/Footer.css
+++ b/portal-front/src/components/Footer.css
@@ -97,7 +97,7 @@
   margin-bottom: 0.5rem;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
   'Lucida Sans', Arial, sans-serif;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .footer-link-items a:hover {
@@ -142,7 +142,8 @@
 
 .social-logo {
   justify-self: start;
-  margin-left: 20px;
+  align-items: center;
+ 
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -159,7 +160,8 @@
 
 @media screen and (max-width: 820px) {
   .footer-links {
-    padding-top: 0.5rem;
+
+    padding-left: 3rem;
   }
 
   .footer-input {
