--- a/portal-front/src/components/Footer.css
+++ b/portal-front/src/components/Footer.css
@@ -8,8 +8,8 @@
 }
 
 .graphfooter-container {
-  background-color: #000000;
-  height: 55px;
+  background-color: #ffffff;
+  height: 57px;
   display: flex;
   flex-direction: column;
   justify-content: center;
