--- a/my-app/src/components/Footer.css
+++ b/my-app/src/components/Footer.css
@@ -7,6 +7,17 @@
   align-items: center;
 }
 
+.graphfooter-container {
+  background-color: #ffffff;
+  height: 57px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 75px;
+}
+
 .footer-subscription {
   display: flex;
   flex-direction: column;
@@ -86,7 +97,7 @@
   margin-bottom: 0.5rem;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
   'Lucida Sans', Arial, sans-serif;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .footer-link-items a:hover {
@@ -130,15 +141,16 @@
 }
 
 .social-logo {
-  color: #fff;
   justify-self: start;
-  margin-left: 20px;
+  align-items: center;
+ 
   cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
   display: flex;
   align-items: center;
   margin-bottom: 16px;
+  height: 55px;
+  width: 130px;
+
 }
 
 .website-rights {
@@ -148,7 +160,8 @@
 
 @media screen and (max-width: 820px) {
   .footer-links {
-    padding-top: 0.5rem;
+
+    padding-left: 3rem;
   }
 
   .footer-input {
