--- a/my-app/src/components/pages/pagesBI/Bi.css
+++ b/my-app/src/components/pages/pagesBI/Bi.css
@@ -104,3 +104,42 @@
   }
 }
 
+@media only screen and (min-width: 1440px) and (max-width: 1740px) {
+  .economia
+   {
+    display: flex;
+    height: 100vh;
+    width: 150vh;
+    align-items: center;
+    justify-content: center;
+    font-size: 10rem;
+    padding: 20px;
+    }
+  }
+
+  @media only screen and (min-width: 1740px) and (max-width: 1920px) {
+    .economia
+     {
+      display: flex;
+      height: 100vh;
+      width: 150vh;
+      align-items: center;
+      justify-content: center;
+      font-size: 10rem;
+      padding: 20px;
+      }
+    }
+
+    @media only screen and (min-width: 1920px) and (max-width: 2100px) {
+      .economia
+       {
+        display: flex;
+        height: 100vh;
+        width: 150vh;
+        align-items: center;
+        justify-content: center;
+        font-size: 10rem;
+        padding: 20px;
+        }
+      }
+
