--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,21 @@
 .footer-container {
   background-color: #242424;
-  padding: 4rem 0 2rem 0;
+  padding: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.graphfooter-container {
+  background-color: #ffffff;
+  height: 57px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 75px;
 }
 
 .footer-subscription {
@@ -13,8 +24,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
-  margin-bottom: 24px;
+  margin-bottom: 2px;
   padding: 24px;
   color: #fff;
 }
@@ -22,6 +32,7 @@
 .footer-subscription > p {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
 }
 
 .footer-subscription-heading {
@@ -32,6 +43,8 @@
 .footer-subscription-text {
   margin-bottom: 24px;
   font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .footer-input {
@@ -64,10 +77,14 @@
   text-align: left;
   width: 160px;
   box-sizing: border-box;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .footer-link-items h2 {
   margin-bottom: 16px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
 }
 
 .footer-link-items > h2 {
@@ -78,6 +95,9 @@
   color: #fff;
   text-decoration: none;
   margin-bottom: 0.5rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+  'Lucida Sans', Arial, sans-serif;
+  font-size: 12px;
 }
 
 .footer-link-items a:hover {
@@ -121,15 +141,16 @@
 }
 
 .social-logo {
-  color: #fff;
   justify-self: start;
-  margin-left: 20px;
+  align-items: center;
+ 
   cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
   display: flex;
   align-items: center;
   margin-bottom: 16px;
+  height: 55px;
+  width: 130px;
+
 }
 
 .website-rights {
@@ -139,7 +160,8 @@
 
 @media screen and (max-width: 820px) {
   .footer-links {
-    padding-top: 2rem;
+
+    padding-left: 3rem;
   }
 
   .footer-input {
