--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: #fff;
+  background: rgb(255, 255, 255);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -8,14 +8,14 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  border-bottom: 2px solid #00773D;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
+
 }
 
 img {
 height:50px;
 width:50px;
 margin-right: 1%;
-
 }
 
 .navbar-container {
