--- a/src/components/pages/pagesBI/graphs.css
+++ b/src/components/pages/pagesBI/graphs.css
@@ -6,6 +6,7 @@
 
   }
 
+
     .botaobaixar {
       height:100px; 
       width:300px; 
@@ -23,7 +24,7 @@
     text-align: justify;
   }
 
-  .teste {
+  .teste{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -32,6 +33,17 @@
     padding: 2rem 0;
     margin-left:10%;
     margin-right:10%;
+  }
+
+  .customOverlay {
+    background: rgba(4, 62, 87, 0.7);
+  }
+  .customModal {
+    background: #05c040;
+    max-width: 500px;
+    width: 100%;
+    height: 30%;
+    text-align: center;
   }
 
   .legend {
@@ -50,6 +62,15 @@
     justify-content: center;
     font-size: 10rem;
   }
+  .mapas
+  {
+     display: flex;
+     height: 90vh;
+     width: 155vh;
+     align-items: center;
+     justify-content: center;
+     font-size: 10rem;
+   }
   
   .social {
     display: flex;
