--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -26,10 +26,10 @@
 }
 
 .relative {
-  background-color: #ffffff;
-  height: 55px;
+  background-color: #e9ecef;
+  height: 30px;
   position: relative;
-  bottom: 73px;
+  bottom: 34px;
 }
 
 
